--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
@@ -22,20 +26,6 @@ select:-webkit-autofill:focus {
   border: none;
   box-shadow: 0 0 0px 1000px #00000000 inset !important;
   transition: background-color 5000s ease-in-out 0s;
-}
-
-::-webkit-scrollbar-track {
-}
-
-::-webkit-scrollbar {
-  width: 6px;
-  background-color: #f5f5f5;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
 }
 
 .my-20 {
