--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ select:-webkit-autofill:focus {
 #root {
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./assets/images/background.jpeg) no-repeat center center fixed;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(./assets/images/background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
