--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  font-size: 14px;
+  font-family: 'Roboto';
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
