--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
+  color: inherit;
   border: none;
   box-shadow: 0 0 0px 1000px #00000000 inset !important;
   transition: background-color 5000s ease-in-out 0s;
