--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,14 @@ select:-webkit-autofill:focus {
 .MuiAutocomplete-listbox {
   max-height: 175px;
 }
+.light #segment_subscribers-listbox {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 6px 2px rgba(62, 201, 128, 0.3);
+  border-radius: 8px;
+}
+.light #segment_subscribers-listbox > li:hover {
+  background-color: #e1fff4;
+}
 .MuiMenuItem-root[aria-selected='true']::after,
 .MuiAutocomplete-option[aria-selected='true']::after {
   background-image: url('./assets/icons/check.svg');
