--- a/src/index.css
+++ b/src/index.css
@@ -85,8 +85,11 @@ select:-webkit-autofill:focus {
   box-shadow: 0px 0px 6px 2px rgba(62, 201, 128, 0.3);
   border-radius: 8px;
 }
+.light #segment_subscribers-listbox > li {
+  background-color: #ffffff;
+}
 .light #segment_subscribers-listbox > li:hover {
-  background-color: #e1fff4;
+  background-color: #e1fff4 !important;
 }
 .MuiMenuItem-root[aria-selected='true']::after,
 .MuiAutocomplete-option[aria-selected='true']::after {
