--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,10 @@ fieldset.MuiFormControl-root .MuiFormGroup-root > label:last-child {
 .MuiChip-root.customTitle span.MuiChip-label {
   pointer-events: none;
 }
+
+.MuiTypography-noWrap {
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
