--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,6 @@ fieldset.MuiFormControl-root .MuiFormGroup-root > label:last-child {
   height: 14.405px;
   width: 14.405px;
 }
+.MuiButton-contained {
+  box-shadow: none !important;
+}
