remove css for button MUI

--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,6 @@ fieldset.MuiFormControl-root .MuiFormGroup-root > label:last-child {
   height: 14.405px;
   width: 14.405px;
 }
-.MuiButton-root {
+.MuiButton-contained {
   box-shadow: none !important;
-  min-width: 100px;
 }
