--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body * {
   box-sizing: border-box;
 }
 
+/* p {
+  margin: 0;
+  padding: 0;
+} */
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
@@ -187,4 +192,8 @@ figure {
 
 .rdw-image-modal-upload-option-label {
   line-break: anywhere;
+}
+
+.MuiSelect-iconStandard {
+  display: none;
 }
