--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ select:-webkit-autofill:focus {
 }
 
 #root {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(./assets/images/background.jpg) no-repeat center center fixed;
