--- a/src/index.css
+++ b/src/index.css
@@ -213,3 +213,8 @@ input[type='number']::-webkit-outer-spin-button {
 .dark .rdw-option-wrapper img {
   filter: brightness(0) invert(1);
 }
+
+span[data-text='true'],
+span[data-offset-key] {
+  pointer-events: none;
+}
