--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 html {
   font-size: 14px;
   font-family: 'Roboto';
+  overflow: hidden;
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', sans-serif;
@@ -68,11 +70,27 @@ select:-webkit-autofill:focus {
 }
 
 #root {
+  display: flex;
+  overflow: auto;
   width: 100%;
   height: 100vh;
+  /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(./assets/images/background.jpg) no-repeat center center fixed; */
+  background: #272b3b;
+  background-size: cover;
+}
+
+#loginBackground {
+  display: flex;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(./assets/images/background.jpg) no-repeat center center fixed;
   background-size: cover;
+}
+
+.light #root {
+  background: #e8ecef;
 }
 
 .SnackbarContent-root {
