--- a/src/index.css
+++ b/src/index.css
@@ -178,7 +178,7 @@ fieldset.MuiFormControl-root .MuiFormGroup-root > label:last-child {
 }
 
 .MuiChip-root {
-  margin-right: 8px;
+  margin: 0 8px 8px 0;
 }
 
 .MuiTypography-noWrap {
